Updated the resources-header.scss - z-index for content-container reduced to 1 to stop dropdown from hiding beneath content

--- a/assets/css/app/resources-header.scss
+++ b/assets/css/app/resources-header.scss
@@ -78,7 +78,7 @@
 }
 // CSS for content on top of carousel
 div#content-container {
-  z-index: 99999;
+  z-index: 1;
   position: relative;
   margin-top: -40px;
 }
